[package]
name = "blackbag"
version = "0.0.1"
edition = "2021"
description = "Sundry tools in Rust for the curious sort"
license = "MIT"

[[bin]]
name = "bkb"
path = "src/main.rs"

[dependencies]
tracing = { version = "0.1.33", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "local-time", "std"] }
tracing-error = { version = "0.2.0" }
color-eyre = { version = "0.6.1" }
